--- a/game/index.html
+++ b/game/index.html
@@ -12,6 +12,8 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
+      background-color: #c0c0c0;
+      overflow: hidden;
     }
 
     canvas {
