--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link rel="icon" type="image/icon" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>new_project</title>
+    <title>new_site</title>
   </head>
   <body>
     <div id="root"></div>
